<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical"
>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/edittext_uri"
            android:ems="10"
            android:id="@+id/website_editText"
            android:importantForAutofill="no"
    />
    <Button
            android:text="@string/open_website_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/open_website_button"
            android:onClick="openWebsite"
    />
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/location_edittext"
            android:ems="10"
            android:id="@+id/location_editText"
    />
    <Button
            android:text="@string/open_location_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/open_location_button"
            android:onClick="openLocation"
    />
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/share_edittext"
            android:ems="10"
            android:id="@+id/share_editText"
            android:importantForAutofill="no"
    />
    <Button
            android:text="@string/share_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/share_button"
            android:onClick="shareText"
    />
</LinearLayout>